--- a/templates/apiInstance.html
+++ b/templates/apiInstance.html
@@ -62,14 +62,14 @@
 
             <li>
               <a
-                href="/env"
+                href="/mysql"
                 target="_blank"
                 >MySQL示例</a
               >
             </li>
             <li>
               <a
-                href="/api"
+                href="/sample"
                 target="_blank"
                 >API示例</a
               >
