--- a/templates/mysql.html
+++ b/templates/mysql.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-      <h1>Hello, {{table_name_list}}!</h1>
+{#      <h1>Hello, {{table_name_list}}!</h1>#}
+    <h1>{% for i in  table_name_list%}
+        <h2>
+            {{i}}
+        </h2>
+        {% end %}
+
+    </h1>
 </body>
 </html>
