--- a/templates/mysql.html
+++ b/templates/mysql.html
@@ -74,14 +74,14 @@
 
             <li>
               <a
-                href="/env"
+                href="/mysql"
                 target="_blank"
                 >MySQL示例</a
               >
             </li>
             <li>
               <a
-                href="/api"
+                href="/sample"
                 target="_blank"
                 >API示例</a
               >
@@ -102,7 +102,9 @@
     <main>
       <div id="main">
           <div>
-              {{ msg }}
+              <h2>
+                  {{ msg }}
+              </h2>
           </div>
         <div>
 
