--- a/templates/index.html
+++ b/templates/index.html
@@ -62,13 +62,13 @@
         >MySQL示例</a
       >
     </li>
-    <li>
-      <a
-        href="/sample"
-        target="_blank"
-        >API示例</a
-      >
-    </li>
+{#    <li>#}
+{#      <a#}
+{#        href="/sample"#}
+{#        target="_blank"#}
+{#        >API示例</a#}
+{#      >#}
+{#    </li>#}
 
 
       </ul>
