--- a/templates/mysql.html
+++ b/templates/mysql.html
@@ -79,13 +79,13 @@
                 >MySQL示例</a
               >
             </li>
-            <li>
-              <a
-                href="/sample"
-                target="_blank"
-                >API示例</a
-              >
-            </li>
+{#            <li>#}
+{#              <a#}
+{#                href="/sample"#}
+{#                target="_blank"#}
+{#                >API示例</a#}
+{#              >#}
+{#            </li>#}
           </ul>
         </nav>
         <nav id="top-nav-extra">
